--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,4 @@
 @import url(./blocks/footer.css);
 @import url(./blocks/popup.css);
 @import url(./blocks/auth.css);
+@import url(./blocks/infoTip.css);
