--- a/src/blocks/popup.css
+++ b/src/blocks/popup.css
@@ -8,7 +8,6 @@
   flex-direction: column;
   justify-content: center;
   display: none;
-  /* justify-content: center; */
 }
 
 .popup__overlay {
@@ -50,7 +49,7 @@
   color: black;
   padding-left: 36px;
   padding-top: 34px;
-  font-family: "Inter Black";
+  font-family: "Inter Black" sans-serif;
   padding-bottom: 48px;
   margin: 0;
 }
@@ -131,6 +130,7 @@
   color: #ccc;
   background-color: #fff;
   border: solid 1px #ccc;
+  cursor: not-allowed;
 }
 
 .popup__input_type_error {
